// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should print help message on shortcut: help data is incorrect 1`] = `
"Usage: contentful <cmd> [args]

Commands:
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  feedback      Send feedback to Contentful
  init          Get started with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  merge         A CLI version of the Merge app
  organization  Manage and list your organizations
  space         Manage and list your spaces

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2013 Contentful"
`;

exports[`should print help message on wrong subcommand: help data is incorrect 1`] = `
"Usage: contentful <cmd> [args]

Commands:
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  feedback      Send feedback to Contentful
  init          Get started with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  merge         A CLI version of the Merge app
  organization  Manage and list your organizations
  space         Manage and list your spaces

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2013 Contentful
Please specify a command."
`;

exports[`should print help message: help data is incorrect 1`] = `
"Usage: contentful <cmd> [args]

Commands:
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  feedback      Send feedback to Contentful
  init          Get started with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  merge         A CLI version of the Merge app
  organization  Manage and list your organizations
  space         Manage and list your spaces

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2013 Contentful"
`;

exports[`should return code 1 when errors exist no args: help data is incorrect 1`] = `
"Usage: contentful <cmd> [args]

Commands:
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  feedback      Send feedback to Contentful
  init          Get started with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  merge         A CLI version of the Merge app
  organization  Manage and list your organizations
  space         Manage and list your spaces

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2013 Contentful
Please specify a command."
`;
